<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="about"
            type="pl.edu.zut.mad.appzut.about.About" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/about_card_margin_horizontal"
        android:layout_marginStart="@dimen/about_card_margin_horizontal"
        android:layout_marginTop="@dimen/about_card_margin_top"
        app:cardElevation="@dimen/about_card_elevation">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/white">

            <TextView
                android:id="@+id/titleView"
                style="@style/AppText.About.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{about.title}"
                app:layout_constraintEnd_toStartOf="@id/personAvatarView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Marek Macko" />

            <TextView
                android:id="@+id/subtitleView"
                style="@style/AppText.About"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{about.subtitle}"
                app:layout_constraintStart_toStartOf="@id/titleView"
                app:layout_constraintTop_toBottomOf="@id/titleView"
                tools:ignore="ContentDescription"
                tools:text="Mobile developer" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="subtitleView, personAvatarView" />

            <ImageView
                android:id="@+id/emailView"
                emailOnClick="@{about.email}"
                android:layout_width="@dimen/about_card_icon_size"
                android:layout_height="@dimen/about_card_icon_size"
                android:layout_marginStart="@dimen/about_card_icon_margin"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@color/scheduleColorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <ImageView
                android:id="@+id/githubView"
                webOnClick="@{about.github}"
                android:layout_width="@dimen/about_card_icon_size"
                android:layout_height="@dimen/about_card_icon_size"
                android:contentDescription="@string/github_icon"
                android:src="@drawable/ic_github_black_24dp"
                android:tint="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@id/emailView"
                app:layout_constraintTop_toTopOf="@id/emailView" />

            <ImageView
                android:id="@+id/facebookView"
                hideIfMissing="@{about.facebook}"
                webOnClick="@{about.facebook}"
                android:layout_width="@dimen/about_card_icon_size"
                android:layout_height="@dimen/about_card_icon_size"
                android:contentDescription="@string/facebook_icon"
                android:src="@drawable/ic_facebook_black_24dp"
                android:tint="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@id/githubView"
                app:layout_constraintTop_toTopOf="@id/emailView" />

            <ImageView
                android:id="@+id/websiteView"
                hideIfMissing="@{about.website}"
                webOnClick="@{about.website}"
                android:layout_width="@dimen/about_card_icon_size"
                android:layout_height="@dimen/about_card_icon_size"
                android:contentDescription="@string/website_icon"
                android:src="@drawable/ic_web_black_24dp"
                android:tint="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@id/facebookView"
                app:layout_constraintTop_toTopOf="@id/emailView" />

            <android.support.v7.widget.CardView
                android:id="@+id/personAvatarView"
                android:layout_width="@dimen/about_card_avatar_size"
                android:layout_height="@dimen/about_card_avatar_size"
                android:layout_margin="@dimen/about_card_avatar_margin"
                app:cardCornerRadius="@dimen/about_card_avatar_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription">

                <ImageView
                    githubAvatar="@{about.github}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/about_avatar_background"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@android:color/white" />

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</layout>
